--- a/index.html
+++ b/index.html
@@ -5,11 +5,66 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap');
+    </style>
     <title>Rock Paper or Scissors
     </title>
 </head>
 <body>
-    
-    <script src="index.js"></script>
-</body>
-</html>
+    <section class="rps">
+        <div class="container">
+            <div class="playerContainer">
+                <div class="infoScore">
+                    <p>You</p>
+                    <p>Score: 
+                        <span id="playerScore">0</span>
+                    </p>
+                </div>
+                <div class="playerChoice">
+                    <img src="images/rock_icon.png" id="playerChoice">
+                </div>
+                <div class="playerChoices">
+                    <button class="btn">
+                        <img src="images/rock_icon.png" alt="rock">
+                    </button>
+                    <button class="btn">
+                        <img src="images/paper_icon.png" alt="paper">
+                    </button>
+                    <button class="btn">
+                        <img src="images/scissors_icon.png" alt="scissors">
+                    </button>
+                </div>
+            </div>
+            <p>VS</p>
+            <div class="pcContainer">
+                <div class="infoScore">
+                    <p>Machine</p>
+                    <p>Score: 
+                        <span id="pcScore">0</span>
+                    </p>
+                </div>
+                <div class="pcChoice">
+                    <img src="images/rock_icon.png" id="pcChoice">
+                </div>
+                <div class="pcChoices">
+                <button class="btn">
+                    <img src="images/rock_icon.png" alt="rock">
+                </button>
+                <button class="btn">
+                    <img src="images/paper_icon.png" alt="paper">
+                </button>
+                <button class="btn">
+                    <img src="images/scissors_icon.png" alt="scissors">
+                </button>
+            </div>
+        </div>
+        <div class="info">
+            <h2 class="result">Rock and Rock. It's a tie.</h1>
+                <h1 class="winner">Winner is: Player</h1>
+            </div>
+        </div>
+    </section>
+        <script src="index.js"></script>
+    </body>
+    </html>
