--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
         <div class="info">
             <h2 class="result">Rock and Rock. It's a tie.</h1>
-                <h1 class="winner">Winner is: Player</h1>
+                <h1 class="winner">Winner is: </h1>
             </div>
         </div>
     </section>
